--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apache-server-configs": "^2.8.0",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jst": "^0.6.0",
     "grunt-contrib-uglify": "^0.6.0",
